<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
    <TextView
            android:text="@string/cheeseburger"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:id="@+id/nameLabel"/>
    <ImageView
            android:id="@+id/itemImage"
            app:srcCompat="@drawable/classic_burger"
            android:contentDescription="@string/classic_burger"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:layout_below="@+id/nameLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
    <TextView
            android:id="@+id/itemDescription"
            android:text="@string/cheeseburger_description"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_toEndOf="@id/nameLabel"
            android:layout_toRightOf="@id/nameLabel"
            android:layout_toStartOf="@id/priceLabel"
            android:layout_toLeftOf="@id/priceLabel"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"/>
    <TextView
            android:id="@+id/priceLabel"
            android:text="@string/cheeseburger_price"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toStartOf="@id/quantityDisplay"
            android:layout_toLeftOf="@id/quantityDisplay"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"/>

    <TextView
            android:id="@+id/quantityDisplay"
            android:text="@string/startingQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
</RelativeLayout>